# phidgetspp

./: .gitignore  CMakeLists.txt
phidgetspp/: phidgetspp.cpp  phidgetspp.hpp  sensors.hpp
src/: phidgetspp.hpp  sensors.hpp
tests/: test_phidgetspp.cpp
